--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <p>
       Copyright &copy; 
   <script>document.write(new Date().getFullYear())</script>
-      - <a href="https://github.com/rdsmelanie" target="_blank">@rdsmelanie</a>
+      - <a href="https://github.com/dsmelanie" target="_blank">@dsmelanie</a>
   </p>
 </footer>
 
